fix: overflowing chars in screen fix: allow snarky message to appear

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
   border: 1px solid rgb(138, 138, 138);
   border-radius: 6px;
   text-align: right;
-  font-size: 30px;
+  font-size: 1.4rem;
   line-height: 38px;
 }
 
